fix rest api employee object with list of allower leave request types
